# ai-ssh-client

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  build.bat  docker-compose.yml  electron-builder.yml  index.html  overview.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts  vitest.config.ts  使用说明.md  启动开发模式.bat  启动开发模式.ps1
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ai-module-analysis.md  dev-log-2026-05-11.md  optimization-spec.md  refactor-blueprint.md  ui-tokens.md
scripts/: gen-ico.js  generate-icons.js  test-command-history-index.cjs  test-links-shell-integration.cjs  test-merge-remote-output.cjs  test-paste-safety.cjs  test-sentinel-stripper.cjs  test-sentinel-stripper.ts  test-settings-persistence-fields.cjs  test-sftp-items.cjs  test-sftp-transfer.cjs  test-sftp-upload.cjs  test-terminal-settings.cjs  test-ui-design-system.cjs
scripts/lib/: ui-design-system-check.cjs
server/: auth.cjs  index.cjs  sentinel.cjs  sftp-items.cjs  sftp-transfer.cjs  sftp-upload.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: agent.rs  ai.rs  connections.rs  files.rs  mod.rs  settings.rs  ssh.rs
src-tauri/src/models/: ai.rs  ipc.rs  mod.rs  settings.rs  sftp.rs  ssh.rs
src-tauri/src/services/: agent_history_service.rs  agent_service.rs  ai_service.rs  mod.rs  sentinel.rs  sftp_service.rs  ssh_service.rs  storage_service.rs
src/main/: index.ts  preload.ts
src/renderer/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/shared/: constants.ts  global.d.ts  ipc-types.ts  types.ts
test/: auth.test.ts  command-history-index.test.ts  merge-remote-output.test.ts  paste-safety.test.ts  sentinel.test.ts  settings-persistence-fields.test.ts  sftp-items.test.ts  sftp-transfer.test.ts  sftp-upload.test.ts  shell-integration.test.ts  terminal-settings.test.ts  ui-design-system.test.ts
(+116 files in other folders)
