[package]
name = "ai-ssh-client"
version = "1.0.0"
description = "AI-powered SSH client with natural language control"
authors = ["AI SSH Client"]
edition = "2021"

[lib]
name = "ai_ssh_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "5"
keyring = { version = "3", features = ["windows-native"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
russh = { version = "0.61.2", default-features = false, features = ["ring", "rsa", "flate2"] }
russh-sftp = "2.1.1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
